# exiobase-computation-options

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
exon/: __init__.py  __main__.py  args.py  logger.py  paths.py  utils.py
exon/exiobase/: __init__.py  build_in_bw.py  constants.py  extract.py
exon/lcia_computations/: __init__.py  bw_computations.py  direct_matrix_computations.py  manual_computations.py  utils.py
exon/lcia_methods/: __init__.py  constants.py  iwp.py
exopt/: __init__.py  __main__.py  args.py  computation_test.ipynb  logger.py  plots.ipynb  utils.py
exopt/exiobase/: __init__.py  build_in_bw.py  constants.py  extract.py
exopt/lcia_computations/: __init__.py  bw_computations.py  direct_matrix_computations.py
exopt/lcia_methods/: __init__.py  iwp.py
notebooks/: plots.ipynb
